fix for left align header

--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -22,11 +22,12 @@
 }
 
 .bar .title {
-    text-align: right;
+    text-align: center;
 }
 
 .bar .title.title-left {
-    text-align: right;
+    text-align: center;
+    left: 57px!important;
 }
 
 .toggle-small .handle {
